@@ -7,7 +7,7 @@ libntp_a_SOURCES = a_md5encrypt.c adjtime.c atoint.c atolfp.c atouint.c \
 	clocktime.c clocktypes.c decodenetnum.c dofptoa.c dolfptoa.c \
 	emalloc.c findconfig.c fptoa.c fptoms.c getopt.c hextoint.c \
 	hextolfp.c humandate.c inttoa.c lib_strbuf.c machines.c md5c.c \
-	memmove.c mexit.c mfptoa.c mfptoms.c modetoa.c mstolfp.c msutotsf.c \
+	memmove.c mfptoa.c mfptoms.c modetoa.c mstolfp.c msutotsf.c \
 	msyslog.c netof.c numtoa.c numtohost.c octtoint.c prettydate.c \
 	ranny.c refnumtoa.c statestr.c syssignal.c systime.c tsftomsu.c \
 	tstotv.c tvtoa.c tvtots.c uglydate.c uinttoa.c utvtoa.c ymd2yd.c \
